--- a/book/python/02_variables.ipynb
+++ b/book/python/02_variables.ipynb
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_points = 120"
+    "num_points = 120.5"
    ]
   },
   {
@@ -58,12 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121.5\n"
+     ]
+    }
+   ],
    "source": [
-    "print(num_points)"
+    "print(num_points + 1)"
    ]
   },
   {
@@ -76,12 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_points"
+    "type(num_points)"
    ]
   },
   {
@@ -132,13 +151,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "latitude = 35.6895  # Represents the latitude of a point on Earth's surface\n",
     "longitude = 139.6917  # Represents the longitude of a point on Earth's surface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d5d74892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinate_system = (latitude, longitude)  # Represents the coordinate system used for geospatial data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7039356a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35.6895, 139.6917)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(coordinate_system)"
    ]
   },
   {
@@ -151,12 +198,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
     "coordinate_system = \"WGS 84\"  # Represents a commonly used coordinate system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e92a824",
+   "metadata": {},
+   "source": [
+    "Represents a commonly used coordinate systemRepresents a commonly used coordinate system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "12233b7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Beissa\" # Represents the name"
    ]
   },
   {
@@ -207,6 +272,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4c46856c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = [35.6895, 139.6917]  # A tuple representing latitude and longitude of a point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "48a7fd0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " coordinates2 = [\"35.6895\", \"139.6917\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e0e0e73d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coordinates == coordinates2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e0362b91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(coordinates2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "00eac2f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(coordinates)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "19",
    "metadata": {},
@@ -216,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "20",
    "metadata": {},
    "outputs": [],
@@ -227,6 +375,64 @@
     "    \"type\": \"Stratovolcano\",\n",
     "    \"location\": [35.3606, 138.7274],\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "624cd953",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Mount Fuji',\n",
+       " 'height_meters': 3776,\n",
+       " 'type': 'Stratovolcano',\n",
+       " 'location': [35.3606, 138.7274]}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9e46dc43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_attributes[\"height_meters\"] = 3500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "486cf027",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Mount Fuji',\n",
+       " 'height_meters': 3500,\n",
+       " 'type': 'Stratovolcano',\n",
+       " 'location': [35.3606, 138.7274]}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_attributes"
    ]
   },
   {
@@ -241,10 +447,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "This is a Python script.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\\nThis is a Python script.\")"
    ]
@@ -259,10 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the first line.\n",
+      "\tThis is the second line. It is indented.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"This is the first line.\\n\\tThis is the second line. It is indented.\")"
    ]
@@ -277,10 +501,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your name?\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"What's your name?\")"
    ]
@@ -290,7 +522,15 @@
    "execution_count": null,
    "id": "27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your name?\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"What's your name?\")"
    ]
@@ -330,12 +570,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
+   "execution_count": 36,
+   "id": "6e1290e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_features += 20\n",
+    "num_features = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "866336e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = num_features + 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "08696b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated number of features: -10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_features -= 20\n",
     "print(\"Updated number of features:\", num_features)"
    ]
   },
@@ -392,10 +681,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
+   "execution_count": 46,
+   "id": "3c72a84e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "firstname = \"jojo\"\n",
+    "lastname = \"tetteh\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c3662962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jojo tetteh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{firstname} {lastname}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mount Fuji is 3500 meters high.\n"
+     ]
+    }
+   ],
    "source": [
     "mount_fuji_name = feature_attributes[\"name\"]\n",
     "mount_fuji_height = feature_attributes[\"height_meters\"]\n",
@@ -416,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "39",
    "metadata": {},
    "outputs": [],
@@ -439,10 +765,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Centroid of the points is at: [42.526425, 5.918099999999998]\n"
+     ]
+    }
+   ],
    "source": [
     "centroid_lat = sum([point[0] for point in points]) / len(points)\n",
     "centroid_lon = sum([point[1] for point in points]) / len(points)\n",
@@ -497,7 +831,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "manii",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
